--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "scroll": "^2.0"
   },
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0",
-    "react-dom": "^0.14.0 || ^15.0.0"
+    "react": "^0.14.0 || ^15.0.0 || ^16.0.0",
+    "react-dom": "^0.14.0 || ^15.0.0 || ^16.0.0",
+    "prop-types": "^15.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.22",
